# sysopy

./: README.md
lab2/zad1/: CMakeLists.txt  main.c
lab2/zad2/: Makefile  main.c
zestaw1/: CMakeLists.txt  main.c  raport.txt  string_array_lib.c  string_array_lib.h
zestaw1/zad1/: CMakeLists.txt
zestaw1/zad2/: CMakeLists.txt  main.c  string_array_lib.c
zestaw1/zad3a/: CMakeLists.txt  Makefile  raport.txt
zestaw10/: CMakeLists.txt
zestaw10/zad1/: client.c  common.h  server.c
zestaw10/zad2/: client.c  common.h  server.c
zestaw3/zad1/: CMakeLists.txt  main.c
zestaw3/zad2/: main.c
zestaw3/zad3/: CMakeLists.txt  main.c
zestaw3/zad3/example/: CMakeLists.txt  error_memory.c  error_time.c  main.c
zestaw4/zad1/: CMakeLists.txt  main.c
zestaw4/zad1-2/: CMakeLists.txt  main.c
zestaw4/zad2/: child.c  child2.c  main.c  main2.c
zestaw4/zad3/: main.c
zestaw5/zad1/: CMakeLists.txt  main.c
zestaw5/zad2/: main.c  master.c  slave.c
zestaw6/zad1/: CMakeLists.txt  client.c  communication_protocol.h  main.c
zestaw6/zad2/: CMakeLists.txt  client.c  communication_protocol.h  main.c
zestaw7/: CMakeLists.txt  barber_problem.h  client.c  main.c
zestaw7/zad1/: CMakeLists.txt  barber2.c  client2.c  common.h
zestaw7/zad2/: CMakeLists.txt  barber2.c  client2.c  common.h
zestaw8/: CMakeLists.txt  main.c
zestaw9/zad1/: CMakeLists.txt  main.c
zestaw9/zad2/: CMakeLists.txt  main.c  pantadeusz
